# refactorProject

./: CMakeLists.txt  checkInitialization.c  checkInitialization.h  checkLooping.c  checkLooping.h  checkRecursion.c  checkRecursion.h  definitions.h  fileHandling.c  fileHandling.h  generalFunctions.c  generalFunctions.h  incorrectWriting.c  incorrectWriting.h  main.c  newTypes.c  newTypes.h  specialSymbols.c  specialSymbols.h  stack.c  stack.h  structs.c  structs.h  unusedTokens.c  unusedTokens.h  wordHandler.c  wordHandler.h
